--- a/src/App.css
+++ b/src/App.css
@@ -79,6 +79,16 @@ ul {
   margin-bottom: 1rem;
 }
 
+.links {
+  padding: 1rem;
+}
+
+/* .links ul {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+} */
+
 .card-title {
   display: flex;
   justify-content: flex-start;
