--- a/src/App.css
+++ b/src/App.css
@@ -24,17 +24,19 @@
 header {
   background-color: #375a7f;;
   display: flex;
-  flex-direction: column;
+  /* flex-direction: column; */
   padding: 2rem;
   align-items: center;
+  justify-content: flex-start;
 }
 
 .logo-div {
   display: flex;
-  align-items: center;
-  justify-content: center;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-left: 10%;
   font-size: 2rem;
-  width: 100%;
+  width: 50%;
 }
 
 .logo-div h1 {
@@ -42,23 +44,28 @@ header {
   font-weight: 600;
   color: white;
   text-shadow: 2px 2px 2px black;
+  margin-bottom: 0 !important;
 }
 
 .logo-div small {
   font-style: italic;
-  margin-left: 2rem;
+  font-size: 1.2rem;
+  /* margin-left: 2rem; */
+  color: #3498DB;
+  text-shadow: 2px 2px 20px black;
 }
 
 .search-div {
   display: flex;
   flex-direction: column;
-  width: 70%;
+  justify-content: flex-start;
+  min-width: 40%;
+  margin-right: 12%;
 }
 
 .search-div input {
-  margin-left: 1rem;
-  height: 3rem;
-  font-size: 2rem;
+  height: 2rem;
+  font-size: 1.8rem;
 }
 
 .toggle-btn {
@@ -136,7 +143,7 @@ ul {
 }
 
 .card-title h2 {
-  color: #999;
+  color: #3498DB ;
 }
 
 .card-title img {
@@ -156,12 +163,11 @@ ul {
 }
 
 .card-link {
-  margin-left: 3.7rem;
   font-size: 1.4rem;
+  margin-left: 3.7rem;
 }
 
 .btn-dark {
-  /* background-color: #3498DB !important; */
   font-size: 18px;
   text-shadow: 2px 2px 4px black;
   /* width: 110px; */
