code cleanup, readme populated with remainder of bugs to fix, filter function is working perfectly

--- a/src/App.css
+++ b/src/App.css
@@ -193,6 +193,11 @@ ul {
   margin-top: 2rem;
 }
 
+.multi-tag {
+  display: flex;
+  justify-content: space-between;
+}
+
 #message {
   color: white;
   font-size: 2rem;
