--- a/src/App.css
+++ b/src/App.css
@@ -25,12 +25,18 @@
 }
 
 header {
+  /* background-color: steelblue !important; */
   align-items: center;
   /* background-image: linear-gradient(to left bottom, */
     /* #333333, #3b3b45, #3f4457, #3e4f6b, #375a7f); */
   display: flex;
   justify-content: flex-start;
   padding: 1rem 12%;
+  box-shadow: 2px 2px 4px gray;
+}
+
+.bg-primary {
+  background-color: steelblue !important;
 }
 
 .logo-div {
@@ -64,8 +70,8 @@ header {
 }
 
 .search-div input {
-  font-size: 1.4rem;
-  height: 2rem;
+  font-size: 2.4rem;
+  height: 4rem;
 }
 
 .toggle-btn {
@@ -73,7 +79,7 @@ header {
   background-position: center;
   background-size: contain;
   background-color: white;
-  float: right;
+  margin: 1% 48%;
   height: 20px;
   width: 20px;
 }
@@ -97,14 +103,19 @@ header {
 .tag-section div {
   display: flex;
   flex-wrap: wrap;
-  justify-content: flex-start;
+  justify-content: center;
   padding: 1rem;
 }
 
 .tag-section label {
   margin-right: 0.6rem;
   margin-top: 0.6rem;
-  width: 130px;
+  width: 15%;
+}
+
+.btn-dark {
+  background-color: steelblue;
+  border: none;
 }
 
 ul {
@@ -114,10 +125,6 @@ ul {
 
 .tag-list ul {
   display: flex !important;
-}
-
-.primary {
-  /* color: #375a7f !important; */
 }
 
 .links {
@@ -133,39 +140,47 @@ ul {
 
 .card {
   /* box-shadow: -1px -1px 1px 1px #375a7f; */
-  margin-bottom: 1rem;
-  width: 80vw;
+  /* margin-bottom: 1rem; */
+  width: 100vw;
+  height: 7rem;
+}
+
+.card-body {
+  display: flex !important;
+  justify-content: space-between !important;
+  align-items: center;
 }
 
 .card-title {
   display: flex;
   justify-content: flex-start;
   margin-bottom: 0 !important;
+  width: 100%;
 }
 
 .card-title img {
-  height: 20px;
-  width: 20px;
+  height: 15px;
+  width: 15px;
   margin-top: 2px;
   margin-right: 1rem;
-  margin-left: 1rem;
 }
 
 .card-title h2 {
   /* color: #3498DB; */
+  font-size: 1.6rem;
 }
 
 .card-text {
   /* color: #999; */
   font-size: 1.4rem;
   font-style: italic;
-  margin-left: 4.2rem;
-  margin-top: 6px;
+  /* margin-left: 4.2rem; */
+  /* margin-top: 6px; */
 }
 
 .card-link {
   font-size: 1.0rem;
-  margin-left: 4.2rem;
+  /* margin-left: 4.2rem; */
   text-overflow: ellipsis;
 }
 
@@ -197,7 +212,6 @@ ul {
 }
 
 #message {
-  /* color: white; */
   font-size: 2rem;
 }
 
@@ -230,6 +244,6 @@ ul {
   }
 
   .card {
-    width: 95%;
+    width: 98%;
   }
 }
