--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,10 @@
   font-size: 0.6rem;
 }
 
+body {
+  /* background-color: lightgray; */
+}
+
 header {
   /* background-color: steelblue !important; */
   align-items: center;
@@ -31,7 +35,7 @@ header {
     /* #333333, #3b3b45, #3f4457, #3e4f6b, #375a7f); */
   display: flex;
   justify-content: flex-start;
-  padding: 1rem 12%;
+  padding: 1rem 15%;
   box-shadow: 2px 2px 4px gray;
 }
 
@@ -45,6 +49,7 @@ header {
   flex-direction: column;
   font-size: 2rem;
   width: 30%;
+  margin-right: 2rem;
 }
 
 .logo-div h1 {
@@ -75,6 +80,7 @@ header {
 }
 
 .toggle-btn {
+  border: none !important;
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
@@ -85,11 +91,11 @@ header {
 }
 
 .toggle-btn.down {
-  background-image: url("./expand-arrow.svg");
+  background-image: url("./down.png");
 }
 
 .toggle-btn.up {
-  background-image: url("./collapse-arrow.svg");
+  background-image: url("./up.png");
 }
 
 .hide {
@@ -128,8 +134,7 @@ ul {
 }
 
 .links {
-  padding: 1rem;
-  margin-top: 4rem;
+  /* padding: 1rem; */
 }
 
 .links ul {
@@ -142,7 +147,9 @@ ul {
   /* box-shadow: -1px -1px 1px 1px #375a7f; */
   /* margin-bottom: 1rem; */
   width: 100vw;
-  height: 7rem;
+  min-height: 7rem;
+  border: none;
+  outline: 1px solid steelblue;
 }
 
 .card-body {
@@ -166,27 +173,22 @@ ul {
 }
 
 .card-title h2 {
-  /* color: #3498DB; */
+  font-weight: 400;
   font-size: 1.6rem;
 }
 
 .card-text {
-  /* color: #999; */
   font-size: 1.4rem;
   font-style: italic;
-  /* margin-left: 4.2rem; */
-  /* margin-top: 6px; */
 }
 
 .card-link {
   font-size: 1.0rem;
-  /* margin-left: 4.2rem; */
-  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 .btn-dark {
   font-size: 1.2rem;
-  /* text-shadow: 2px 2px 4px black; */
 }
 
 .link-input {
@@ -195,7 +197,6 @@ ul {
   margin: 2rem 10% 0 10%;
   width: 80%;
   height: 100vh;
-  /* color: white; */
 }
 
 .link-input label {
