--- a/src/App.css
+++ b/src/App.css
@@ -35,8 +35,18 @@ header {
     /* #333333, #3b3b45, #3f4457, #3e4f6b, #375a7f); */
   display: flex;
   justify-content: flex-start;
-  padding: 1rem 15%;
+  padding: 1rem 5%;
   box-shadow: 2px 2px 4px gray;
+}
+
+.link-icon {
+  background-image: url("./link-symbol.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  height: 40px;
+  width: 40px;
+  margin-right: 1rem;
 }
 
 .bg-primary {
@@ -44,7 +54,7 @@ header {
 }
 
 .logo-div {
-  align-items: flex-start;
+  align-items: center;
   display: flex;
   flex-direction: column;
   font-size: 2rem;
@@ -60,10 +70,17 @@ header {
   /* text-shadow: 2px 2px 8px ; */
 }
 
+.logo-and-h1 {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
 .logo-div small {
   /* color: #3498DB; */
-  font-size: 1.8rem;
+  font-size: 1.6rem;
   font-style: italic;
+  margin-left: 5rem;
   /* text-shadow: 2px 2px 20px black; */
 }
 
@@ -103,7 +120,7 @@ header {
 }
 
 .tag-section {
-  padding: 0 10%;
+  padding: 0 10% 2rem 10%;
 }
 
 .tag-section div {
@@ -135,6 +152,7 @@ ul {
 
 .links {
   /* padding: 1rem; */
+  padding: 0 2rem;
 }
 
 .links ul {
@@ -144,7 +162,7 @@ ul {
 }
 
 .card {
-  /* box-shadow: -1px -1px 1px 1px #375a7f; */
+  /* box-shadow: 1px 1px 1px 1px #375a7f; */
   /* margin-bottom: 1rem; */
   width: 100vw;
   min-height: 7rem;
@@ -228,7 +246,11 @@ ul {
 
   .logo-div {
     justify-content: center;
-    width: 70%;
+    width: 100%;
+  }
+
+  .logo-div small {
+    margin-left: 0;
   }
 
   .search-div {
