--- a/src/App.css
+++ b/src/App.css
@@ -217,25 +217,44 @@ ul {
 .link-input {
   display: flex;
   flex-direction: column;
-  margin: 2rem 10% 0 10%;
-  width: 80%;
-  height: 100vh;
+  justify-content: space-between;
+  margin: 2rem 20%;
 }
 
 .link-input label {
   margin-top: 2rem;
+  font-size: 2rem;
 }
 
-.link-input input {
+.link-input input[type=text] {
+  margin-top: 1rem;
+  height: 1.6rem;
+  font-size: 1.2rem;
+  padding: 10px;
+  border: 1px solid steelblue;
+  margin-right: 6px;
+}
+
+.link-input input[type=submit] {
   margin-top: 2rem;
+  height: 4rem;
+  width: 15%;
+  font-size: 2rem;
+  /* align-self: center; */
 }
 
 .multi-tag {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
+  flex-wrap: wrap;
 }
 
-#message {
+.edit-link-form {
+  outline: 2px solid steelblue;
+  padding: 2rem;
+}
+
+.message {
   font-size: 2rem;
 }
 
