--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,13 @@
-/* --blue: #375a7f;
-    --indigo: #6610f2;
-    --purple: #6f42c1;
-    --pink: #e83e8c;
-    --red: #E74C3C;
-    --orange: #fd7e14;
-    --yellow: #F39C12;
-    --green: #00bc8c;
-    --teal: #20c997;
-    --cyan: #3498DB;
-    --white: #fff;
-    --gray: #999;
-    --gray-dark: #303030;
-    --primary: #375a7f;
-    --secondary: #444;
-    --success: #00bc8c;
-    --info: #3498DB;
-    --warning: #F39C12;
-    --danger: #E74C3C;
-    --light: #303030;
-    --dark: #303030; */
-
 :root {
   font-size: 0.6rem;
 }
 
-body {
-  /* background-color: lightgray; */
-}
-
 header {
-  /* background-color: steelblue !important; */
   align-items: center;
-  /* background-image: linear-gradient(to left bottom, */
-    /* #333333, #3b3b45, #3f4457, #3e4f6b, #375a7f); */
+  box-shadow: 2px 2px 4px gray;
   display: flex;
   justify-content: flex-start;
   padding: 1rem 5%;
-  box-shadow: 2px 2px 4px gray;
 }
 
 .link-icon {
@@ -67,21 +38,18 @@ header {
   font-size: 5rem;
   font-weight: 600;
   margin-bottom: 0 !important;
-  /* text-shadow: 2px 2px 8px ; */
 }
 
 .logo-and-h1 {
+  align-items: center;
   display: flex;
   justify-content: flex-start;
-  align-items: center;
 }
 
 .logo-div small {
-  /* color: #3498DB; */
   font-size: 1.6rem;
   font-style: italic;
   margin-left: 5rem;
-  /* text-shadow: 2px 2px 20px black; */
 }
 
 .search-div {
@@ -97,11 +65,11 @@ header {
 }
 
 .toggle-btn {
-  border: none !important;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: contain;
   background-color: white;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  border: none !important;
   cursor: pointer;
   margin: 1% 48%;
   height: 20px;
@@ -156,7 +124,6 @@ ul {
 }
 
 .links {
-  /* padding: 1rem; */
   padding: 0 2rem;
 }
 
@@ -167,18 +134,16 @@ ul {
 }
 
 .card {
-  /* box-shadow: 1px 1px 1px 1px #375a7f; */
-  /* margin-bottom: 1rem; */
-  width: 100vw;
-  min-height: 7rem;
   border: none;
+  min-height: 7rem;
   outline: 1px solid steelblue;
+  width: 100vw;
 }
 
 .card-body {
+  align-items: center;
   display: flex !important;
   justify-content: space-between !important;
-  align-items: center;
 }
 
 .card-title {
@@ -191,13 +156,13 @@ ul {
 .card-title img {
   height: 15px;
   width: 15px;
-  margin-top: 2px;
   margin-right: 1rem;
+  margin-top: 2px;
 }
 
 .card-title h2 {
-  font-weight: 400;
   font-size: 1.6rem;
+  font-weight: 400;
 }
 
 .card-text {
@@ -206,7 +171,6 @@ ul {
 }
 
 .card-link {
-  font-size: 1.0rem;
   overflow: hidden;
 }
 
@@ -222,31 +186,30 @@ ul {
 }
 
 .link-input label {
-  margin-top: 2rem;
   font-size: 2rem;
+  margin-top: 2rem;
 }
 
 .link-input input[type=text] {
-  margin-top: 1rem;
-  height: 1.6rem;
-  font-size: 1.2rem;
-  padding: 10px;
   border: 1px solid steelblue;
+  font-size: 1.2rem;
+  height: 1.6rem;
   margin-right: 6px;
+  margin-top: 1rem;
+  padding: 10px;
 }
 
 .link-input input[type=submit] {
+  font-size: 2rem;
   margin-top: 2rem;
   height: 4rem;
-  width: 15%;
-  font-size: 2rem;
-  /* align-self: center; */
+  width: 60%;
 }
 
 .multi-tag {
   display: flex;
-  justify-content: flex-start;
   flex-wrap: wrap;
+  justify-content: flex-start;
 }
 
 .edit-link-form {
@@ -274,7 +237,7 @@ ul {
   }
 
   .logo-div small {
-    margin-left: 0;
+    margin-left: 36px;
   }
 
   .search-div {
@@ -292,5 +255,9 @@ ul {
 
   .card {
     width: 98%;
+  }
+
+  .link-input {
+    margin: 2rem 10%;
   }
 }
