--- a/src/App.css
+++ b/src/App.css
@@ -72,12 +72,33 @@ header>div {
 }
 
 .search-div input {
+  background-color: #7da7ca !important;
   border: none !important;
   font-size: 2rem;
   padding-left: 1rem;
   height: 3rem;
   width: 100%;
-  /* width: 80%; */
+}
+
+::-webkit-input-placeholder { /* Chrome */
+  color: white;
+}
+:-ms-input-placeholder { /* IE 10+ */
+  color: white;
+}
+::-moz-placeholder { /* Firefox 19+ */
+  color: white;
+  opacity: 1;
+}
+:-moz-placeholder { /* Firefox 4 - 18 */
+  color: white;
+  opacity: 1;
+}
+
+input:focus {
+  background-color: white !important;
+  color: black;
+  outline: 0;
 }
 
 .search-icon {
@@ -128,7 +149,7 @@ header>div {
 }
 
 .tag-section {
-  /* padding: 0 5% 2rem 5%; */
+  background-color: lightgray;
   padding-bottom: 2rem;
 }
 
@@ -136,7 +157,7 @@ header>div {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  padding: 1rem;
+  padding: 1.4rem 1rem 0 1rem;
 }
 
 .tag-section label {
@@ -324,7 +345,6 @@ ul {
   .tag-section {
     margin: 0 auto;
     padding: 2rem 0;
-    background-color: lightgray;
   }
 
   .tag-section label {
