--- a/src/App.css
+++ b/src/App.css
@@ -15,10 +15,6 @@ header {
   padding: 1rem 0;
 }
 
-header>div {
-  /* margin: 1rem 0; */
-}
-
 .link-icon {
   background-image: url("./link-symbol.png");
   background-repeat: no-repeat;
@@ -36,7 +32,6 @@ header>div {
 .logo-div {
   align-items: center;
   display: flex;
-  /* flex-direction: column; */
   justify-content: center;
   font-size: 2rem;
   width: 30%;
@@ -56,16 +51,9 @@ header>div {
   justify-content: flex-start;
 }
 
-.logo-div small {
-  font-size: 1.6rem;
-  font-style: italic;
-  margin-left: 5rem;
-}
-
 .search-div {
   display: flex;
   align-self: stretch;
-  /* flex-direction: column; */
   justify-content: center;
   width: 60%;
   margin: 0 20%;
@@ -210,13 +198,6 @@ ul {
   margin: 0 2%;
 }
 
-.card:hover {
-  /* background-color: steelblue; */
-  /* color: white; */
-  /* outline: 1px solid steelblue; */
-  /* text-decoration: underline; */
-}
-
 .card-body {
   align-items: center;
   display: flex !important;
@@ -234,7 +215,7 @@ ul {
   height: 20px;
   width: 20px;
   margin-right: 1rem;
-  /* margin-top: 1px; */
+  padding: 2px;
 }
 
 .card-title h2 {
@@ -306,7 +287,6 @@ ul {
 
   header {
     flex-direction: column;
-    /* justify-content: flex-start !important; */
     align-items: center;
   }
 
@@ -326,16 +306,10 @@ ul {
 
   .logo-div {
     justify-content: center;
-    /* width: 100%; */
     margin-right: 5%;
   }
 
-  .logo-div small {
-    /* margin-left: 36px; */
-  }
-
   .search-div {
-    /* width: 80vw !important; */
     align-items: center;
     justify-content: center;
     width: 90%;
