--- a/src/App.css
+++ b/src/App.css
@@ -181,6 +181,15 @@ ul {
   justify-content: center;
 } */
 
+.results {
+  margin: 1rem 0 1rem 2rem;
+  text-align: center;
+  font-size: 1.2rem;
+  padding: 5px;
+  border: 1px solid lightgray;
+  max-width: 60px;
+}
+
 .card {
   border: none;
   min-height: 6rem;
