--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@
   font-size: 0.6rem;
 }
 
+/* * {
+  margin: 0;
+} */
+
 body {
   width: 100vw;
 }
@@ -172,7 +176,7 @@ ul {
 }
 
 .links {
-  padding: 0 4rem;
+  /* padding: 0 4rem; */
 }
 
 /* .links ul {
@@ -231,23 +235,25 @@ ul {
 
 .card-title img {
   height: 20px;
-  width: 20px;
-  margin-right: 1rem;
+  max-width: 20px;
+  margin-right: 4%;
   padding: 2px;
 }
 
 .card-title h2 {
-  font-size: 1.6rem;
+  font-size: 1.4rem;
   font-weight: 400;
 }
 
 .card-text {
-  font-size: 1.4rem;
+  font-size: 1.2rem;
   font-style: italic;
+  text-overflow: hidden;
 }
 
 .card-link {
-  overflow: hidden;
+  /* font-size: 0.8rem !important; */
+    /* text-overflow: hidden; */
   /* color: black; */
 }
 
@@ -351,7 +357,7 @@ ul {
   }
 
   .links {
-    padding: 0 1%;
+    /* padding: 0 1%; */
   }
 
   .card {
